--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,18 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "_assets": ["src/assets/*"],
+      "_components": ["src/components/*"],
+      "_styles": ["src/styles/*"],
+      "_utils": ["src/utils/*"]
+    }
+  },
+  "include": [
+    "./**/*",
+    "./*",
+    ".eslintrc.js"
+  ]
 }
