--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "eslint": "^7.24.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-paper": "^4.7.2",
+    "react-native-web": "~0.13.12",
+    "recoil": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "typescript": "~4.0.0"
   },
   "private": true
