--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
@@ -23,7 +25,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-svg": "^12.1.1-0",
+    "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.13.12",
     "recoil": "^0.2.0"
